--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active fs-5" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link fs-5" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#event">events</a>
+              <a class="nav-link fs-5" href="#event">events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">contact us</a>
+              <a class="nav-link fs-5" href="#contact">contact us</a>
             </li>
           </ul>
         </div>
